provided explicit s3 location for XGB model data

--- a/end-to-end-pipeline/end-to-end-pipeline.ipynb
+++ b/end-to-end-pipeline/end-to-end-pipeline.ipynb
@@ -1278,9 +1278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s3://sagemaker-us-east-1-328296961357/sagemaker/spark-preprocess-demo/2020-06-12-18-31-52/xgboost_model/sagemaker-xgboost-2020-06-12-18-38-12-220/output/model.tar.gz\n",
+      "s3://sagemaker-us-east-1-328296961357/sagemaker/spark-preprocess-demo/2020-06-12-18-31-52/mleap-model/model.tar.gz\n",
+      "inference-pipeline-2020-06-12-18-31-52\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.model import Model\n",
     "from sagemaker.pipeline import PipelineModel\n",
@@ -1289,12 +1299,14 @@
     "sparkml_data = 's3://{}/{}/{}'.format(bucket, mleap_model_prefix, 'model.tar.gz')\n",
     "# passing the schema defined above by using an environment variable that sagemaker-sparkml-serving understands\n",
     "sparkml_model = SparkMLModel(model_data=sparkml_data, env={'SAGEMAKER_SPARKML_SCHEMA' : schema_json})\n",
-    "xgb_model_data = s3_output_location + '/sagemaker-xgboost-2020-06-12-18-38-12-220/output/model.tar.gz'\n",
+    "xgb_model_data = xgb_model.model_data #S3 location of model data path\n",
     "xgb_model = Model(model_data=xgb_model_data, image=training_image)\n",
-    "#xgb_model = Model(model_data=xgb_model.model_data, image=training_image)\n",
     "\n",
     "model_name = 'inference-pipeline-' + timestamp_prefix\n",
-    "sm_model = PipelineModel(name=model_name, role=role, models=[sparkml_model, xgb_model])"
+    "sm_model = PipelineModel(name=model_name, role=role, models=[sparkml_model, xgb_model])\n",
+    "print(xgb_model_data)\n",
+    "print(sparkml_data)\n",
+    "print(model_name)"
    ]
   },
   {
@@ -1363,6 +1375,26 @@
     "                                content_type=CONTENT_TYPE_JSON, accept=CONTENT_TYPE_CSV)\n",
     "\n",
     "print(predictor.predict(payload))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s3://sagemaker-us-east-1-328296961357/sagemaker/spark-preprocess-demo/2020-06-12-18-31-52/xgboost_model/sagemaker-xgboost-2020-06-12-18-38-12-220/output/model.tar.gz'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_model.model_data\n"
    ]
   },
   {
